--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,5 +14,5 @@ sonar.sources=.
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
-#abaikan
+#abaikan hasil dari generate bukan dari coding developer
 sonar.exclusions = coverage/**, node_modules/**, testing/**,
