update lagi sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,4 +15,4 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 #abaikan hasil dari generate bukan dari coding developer
-sonar.exclusions = coverage/**, node_modules/**, testing/**,
+sonar.exclusions= coverage/**, node_modules/**, testing/**
