update sonar properties

--- a/apps/sonar-project.properties
+++ b/apps/sonar-project.properties
@@ -15,4 +15,6 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 #abaikan hasil dari generate bukan dari coding developer
-sonar.exclusions= coverage/**, node_modules/**, testing/**
+sonar.exclusions= apps/coverage/**, apps/node_modules/**, apps/testing/**, Dockerfile
+
+javascipt.lcov.reportPath=coverage/lcov.info
