sonar properties update 3

--- a/apps/sonar-project.properties
+++ b/apps/sonar-project.properties
@@ -15,6 +15,6 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 #abaikan hasil dari generate bukan dari coding developer
-sonar.exclusions= apps/coverage/**, apps/node_modules/**, apps/testing/**, Dockerfile
+sonar.exclusions= apps/coverage/**, apps/node_modules/**, apps/testing/**, apps/Dockerfile
 
 javascipt.lcov.reportPath=apps/coverage/lcov.info
